// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbnail should render an image when file has image extension 1`] = `
<div
  className="thumbnail"
>
  <img
    alt=""
    src="image.jpg"
  />
</div>
`;

exports[`Thumbnail should render generic file as default 1`] = `
<div
  className="thumbnail"
/>
`;

exports[`Thumbnail should render pdf icon when .pdf extension 1`] = `
<div
  className="thumbnail"
>
  <span
    no-translate={true}
  >
    <Connect(Icon)
      icon="file-pdf"
    />
     pdf
  </span>
</div>
`;
